--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="uccQ7pGcaR" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ucd72clTBN" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#uccQ7pGcaR" data-bs-target="#uccQ7pGcaR"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#uccQ7pGcaR" data-bs-target="#uccQ7pGcaR"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#uccQ7pGcaR" data-bs-target="#uccQ7pGcaR"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucd72clTBN" data-bs-target="#ucd72clTBN"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucd72clTBN" data-bs-target="#ucd72clTBN"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucd72clTBN" data-bs-target="#ucd72clTBN"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -136,11 +136,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#uccQ7pGcaR">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucd72clTBN">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#uccQ7pGcaR">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucd72clTBN">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -299,7 +299,7 @@
 					<a href="https://www.instagram.com/smpn2huamual/" target="_blank"><span class="mbr-iconfont m-auto socicon-instagram socicon" style="color: rgb(249, 44, 80); fill: rgb(249, 44, 80);"></span></a>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-7">
-							<strong>Facebook</strong></h4>
+							<strong>Instagram</strong></h4>
 						<h5 class="card-text mbr-fonts-style display-7">smpnegeri2huamual</h5>
 					</div>
 				</div>
@@ -308,7 +308,7 @@
 	</div>
 </section>
 
-<section data-bs-version="5.1" class="footer4 cid-ublpHXFQeC mbr-reveal" once="footers" id="footer04-52">
+<section data-bs-version="5.1" class="footer4 cid-ublpHXFQeC" once="footers" id="footer04-52">
 
     
 
@@ -323,7 +323,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
