create github pages

--- a/page12.html
+++ b/page12.html
@@ -93,11 +93,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="ucd74qWnoh" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ucd97Iu1lW" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucd74qWnoh" data-bs-target="#ucd74qWnoh"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucd74qWnoh" data-bs-target="#ucd74qWnoh"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucd74qWnoh" data-bs-target="#ucd74qWnoh"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucd97Iu1lW" data-bs-target="#ucd97Iu1lW"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucd97Iu1lW" data-bs-target="#ucd97Iu1lW"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucd97Iu1lW" data-bs-target="#ucd97Iu1lW"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -119,11 +119,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucd74qWnoh">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucd97Iu1lW">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucd74qWnoh">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucd97Iu1lW">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
