--- a/page8.html
+++ b/page8.html
@@ -93,11 +93,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="ucd96HTsyl" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ucdaNLPR9s" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucd96HTsyl" data-bs-target="#ucd96HTsyl"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucd96HTsyl" data-bs-target="#ucd96HTsyl"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucd96HTsyl" data-bs-target="#ucd96HTsyl"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucdaNLPR9s" data-bs-target="#ucdaNLPR9s"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucdaNLPR9s" data-bs-target="#ucdaNLPR9s"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucdaNLPR9s" data-bs-target="#ucdaNLPR9s"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -119,11 +119,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucd96HTsyl">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucdaNLPR9s">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucd96HTsyl">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucdaNLPR9s">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -171,7 +171,7 @@
         </div>
 
         <div class="text-wrapper align-left" data-form-type="formoid">
-          <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rrMq/F6WR/WADHo75Ie5uwwmGl3aFlCZ7Xhl4Tg37MoXDnMNNLR4d1JFBpaYLh2klC740CKlBOtZfKbsQfTGyWyNYf/TvF+Ez8OU0vzwd/q3cMWPTTnPIOOZykwhkvOM">
+          <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3xKRlIz1ZiwcH6XxwgMWzGck6utOyXkS/mDjaftWwIJu0F05Rx6FI++3vUoEjC/ZReD9R9uk3DaQeuLXVz6QiOzjyOtRItkS4OPvmFrmhWCmzmVOBLVzcqEctRNyHqxL">
             <div class="row">
               <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terima kasih sudah mendaftar!</div>
               <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -229,7 +229,7 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="footer4 cid-ublpHXFQeC mbr-reveal" once="footers" id="footer04-52">
+<section data-bs-version="5.1" class="footer4 cid-ublpHXFQeC" once="footers" id="footer04-52">
 
     
 
@@ -239,12 +239,12 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 | SMPN 2 Huamual&nbsp; Millythy Christy Kakisina- <a href="https://#" class="text-primary">All Rights Reserved</a>
+                    © Copyright 2025 | Mobirise-&nbsp; Millythy Christy Kakisina- <a href="https://#" class="text-primary">All Rights Reserved</a>
                 </p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Free AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
