create github pages

--- a/page11.html
+++ b/page11.html
@@ -146,7 +146,7 @@
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5">
 							<strong>Ibadah Osis</strong></h5>
-						<p class="mbr-text mbr-fonts-style display-7">Setiap bulannya, kami mengadakan ibadah bersama yang dipimpin oleh OSIS yang sudah diberikan tanggung jawab di bidangnya, di mana siswa berkumpul untuk berdoa dan berdiskusi tentang nilai-nilai keagamaan.<br>
+						<p class="mbr-text mbr-fonts-style display-7">Setiap minggu pada hari jumat, kami mengadakan ibadah bersama yang dipimpin oleh OSIS yang sudah diberikan tanggung jawab di bidangnya, di mana siswa berkumpul untuk berdoa dan berdiskusi tentang nilai-nilai keagamaan.<br>
 						</p>
 						
 					</div>
@@ -312,10 +312,10 @@
                         <h5 class="cardTitle mbr-fonts-style mb-2 display-5">
                             <strong>Hubungi Kami</strong></h5>
                         <ul class="list mbr-fonts-style display-7">
-                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-danger text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-danger text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-danger text-primary">smpn2huamual@gmail.com</a></li>
-                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual Belakang, Kabupaten Seram Bagian Barat, Maluku</li>
+                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-info">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-info">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-info">smpn2huamual@gmail.com</a></li>
+                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual, Kabupaten Seram Bagian Barat, Maluku</li>
                             <li class="mbr-text item-wrap">Jam kerja: 7:00AM - 6:00PM</li>
                         </ul>
                     </div>
