--- a/page15.html
+++ b/page15.html
@@ -89,7 +89,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-3 display-5">
                             <strong>Telepon</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+62 822-3848-2535" class="text-success text-primary">+62 822-3848-2535</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+62 822-3848-2535" class="text-info">+62 822-3848-2535</a></p>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                         <h6 class="card-title mbr-fonts-style mb-3 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:smpn2huamual@gmail.com" class="text-success text-primary">smpn2huamual@gmail.com</a>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:smpn2huamual@gmail.com" class="text-info">smpn2huamual@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                         <h6 class="card-title mbr-fonts-style mb-3 display-5">
                             <strong>Alamat</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Jl. Pendidikan Desa Ariate, kab seram bagian barat Maluku</p>
+                            Jl. Pendidikan Desa Ariate, kec. huamual, kab. seram bagian barat Maluku</p>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                             <strong>Email</strong>
                         </h4>
                         
-                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:smpn2huamual@gmail.com" class="text-warning">smpn2huamual@gmail.com</a>
+                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:smpn2huamual@gmail.com" class="text-secondary">smpn2huamual@gmail.com</a>
                         </h5>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                         </h4>
                         
                         <h5 class="link mbr-black mbr-fonts-style display-7">
-                            <a href="https://wa.me/62 82246962898" class="text-danger">Call&nbsp;+62 822-4696-2898</a></h5>
+                            <a href="https://wa.me/62 82246962898" class="text-white">Call&nbsp;+62 822-4696-2898</a></h5>
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
