--- a/page7.html
+++ b/page7.html
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udvsh2cWPC" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="udKUTzy4Xg" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udvsh2cWPC" data-bs-target="#udvsh2cWPC"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udvsh2cWPC" data-bs-target="#udvsh2cWPC"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udvsh2cWPC" data-bs-target="#udvsh2cWPC"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udKUTzy4Xg" data-bs-target="#udKUTzy4Xg"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udKUTzy4Xg" data-bs-target="#udKUTzy4Xg"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udKUTzy4Xg" data-bs-target="#udKUTzy4Xg"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udvsh2cWPC">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udKUTzy4Xg">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udvsh2cWPC">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udKUTzy4Xg">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -159,10 +159,10 @@
                         <h5 class="cardTitle mbr-fonts-style mb-2 display-5">
                             <strong>Hubungi Kami</strong></h5>
                         <ul class="list mbr-fonts-style display-7">
-                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-secondary text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-secondary text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-secondary text-primary">smpn2huamual@gmail.com</a></li>
-                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual Belakang, Kabupaten Seram Bagian Barat, Maluku</li>
+                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-info">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-info">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-info">smpn2huamual@gmail.com</a></li>
+                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual, Kabupaten Seram Bagian Barat, Maluku</li>
                             <li class="mbr-text item-wrap">Jam kerja: 7:00AM - 6:00PM</li>
                         </ul>
                     </div>
@@ -254,7 +254,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
