--- a/page9.html
+++ b/page9.html
@@ -327,10 +327,10 @@
                         <h5 class="cardTitle mbr-fonts-style mb-2 display-5">
                             <strong>Hubungi Kami</strong></h5>
                         <ul class="list mbr-fonts-style display-7">
-                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-danger text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-danger text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-danger text-primary">smpn2huamual@gmail.com</a></li>
-                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual Belakang, Kabupaten Seram Bagian Barat, Maluku</li>
+                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-black">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-black">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-black">smpn2huamual@gmail.com</a></li>
+                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual, Kabupaten Seram Bagian Barat, Maluku</li>
                             <li class="mbr-text item-wrap">Jam kerja: 7:00AM - 6:00PM</li>
                         </ul>
                     </div>
@@ -422,7 +422,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Building Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
