--- a/page16.html
+++ b/page16.html
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udvsiszZ84" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="udKUVPRSso" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udvsiszZ84" data-bs-target="#udvsiszZ84"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udvsiszZ84" data-bs-target="#udvsiszZ84"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udvsiszZ84" data-bs-target="#udvsiszZ84"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udKUVPRSso" data-bs-target="#udKUVPRSso"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udKUVPRSso" data-bs-target="#udKUVPRSso"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udKUVPRSso" data-bs-target="#udKUVPRSso"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udvsiszZ84">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udKUVPRSso">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udvsiszZ84">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udKUVPRSso">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -121,9 +121,9 @@
     <div class="image-block m-auto">
         <img src="assets/images/kuning-hijau-fotosentris-selebaran-penerimaan-siswa-baru-1414x2000.png" alt="Mobirise">
         <div>
-            <p class="mbr-text mt-4 pb-4 align-center mbr-fonts-style display-7">Mari segera daftarkan putra &amp; putri Bapak/Ibu di SMPN 2 Huamual<br>Mulai Juni - Juli 2024 dengan persyaratan yang telah tertera diatas. 
+            <p class="mbr-text mt-4 pb-4 align-center mbr-fonts-style display-7">Mari segera daftarkan putra &amp; putri Bapak/Ibu di SMPN 2 Huamual<br>Mulai Juni - Juli 2024 dengan persyaratan yang telah tertera di atas. 
 <br>
-<br>Silahkan bisa isi link dibawah ini atau dapat&nbsp; datang langsung ke sekolah serta membawa persyaratan.</p>
+<br>Silahkan bisa isi link di bawah ini atau dapat datang langsung ke sekolah serta membawa persyaratan pendaftaran.</p>
         </div>
     </div>
 </section>
@@ -141,7 +141,7 @@
                     
                 </div>
                 <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZSUrXqbF3h7yz1QY44ILe/wcGlOpR3ZayNguhmuykXHf9BZUFAaPwdS8JJEOLoCWngzgSG33pFp1qdRLyHVis89idirw79xAnWfv2h6vnMtHFmxVV1xECpqzOjvxg0Nm">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kDo/ALWv+nA498BX5k6x6gjB15y+tAxEDP0TtPYNIoqWED4ddXar7dlsCyePUXdXKXrvjO1O8piKC11pXTyHl+3zhl3HF8pq+X1M/Tnx77AWP9FY5/LpqNCgGDUD0I2h">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terima kasih sudah mendaftar!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -201,10 +201,10 @@
                         <h5 class="cardTitle mbr-fonts-style mb-2 display-5">
                             <strong>Hubungi Kami</strong></h5>
                         <ul class="list mbr-fonts-style display-7">
-                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-danger text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-danger text-primary">+62 822-3848-2535</a></li>
-                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-danger text-primary">smpn2huamual@gmail.com</a></li>
-                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual Belakang, Kabupaten Seram Bagian Barat, Maluku</li>
+                            <li class="mbr-text item-wrap">Phone: <a href="tel:+62 822-3848-2535" class="text-info">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">WhatsApp: <a href="https://wa.me/62 82238482535" class="text-info">+62 822-3848-2535</a></li>
+                            <li class="mbr-text item-wrap">Email: <a href="mailto:smpn2huamual@gmail.com" class="text-info">smpn2huamual@gmail.com</a></li>
+                            <li class="mbr-text item-wrap">Alamat: Ariate, Kec. Huamual, Kabupaten Seram Bagian Barat, Maluku</li>
                             <li class="mbr-text item-wrap">Jam kerja: 7:00AM - 6:00PM</li>
                         </ul>
                     </div>
@@ -296,7 +296,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
